create basic form functionality

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Signup</title>
+  <title>Project 3</title>
 </head>
 <body>
-<div >
-  <h1>I am working</h1>
-</div>
+  <h1>Project 3</h1>
   
+<form action="/" method="post">
+  <select name="state">
+    <option value="AL">Alabama</option>
+    <option value="AK">Alaska</option>
+    <option value="AZ">Arizona</option>
+    <option value="AR">Arkansas</option>
+  </select>
+  <button>Submit</button>
+</form>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src=""></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
