results page w orking with info and photo

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -26,7 +26,7 @@
     <option value="MI">Michigan</option>
     <option value="MN">Minnesota</option>
     <option value="MO">Missouri</option>
-    <option value="MT">Montana</option
+    <option value="MT">Montana</option>
     <option value="NE">Nebraska</option>
     <option value="NV">Nevada</option>
     <option value="NH">New Hampshire</option>
@@ -54,13 +54,9 @@
   </select>
   <button>Submit</button>
 
-<<<<<<< HEAD
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="/js/main.js"></script>
-</body>
-</html>
-=======
+
+
 </form>
 
-  <p></p>
->>>>>>> af8b89dd23f5db5d95205d41d01d953c5e699932
+<p></p>
+
