attempting to merge

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -26,7 +26,7 @@
     <option value="MI">Michigan</option>
     <option value="MN">Minnesota</option>
     <option value="MO">Missouri</option>
-    <option value="MT">Montana</option
+    <option value="MT">Montana</option>
     <option value="NE">Nebraska</option>
     <option value="NV">Nevada</option>
     <option value="NH">New Hampshire</option>
