ajax call to govtrack api working

--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -17,8 +17,10 @@
   </div>
 
   <div class="photo">
-    <img src="https://www.govtrack.us/data/photos/<%= @leg["govtrack_id"] %>-200px.jpeg">
+    <img  id="pic" src="https://www.govtrack.us/data/photos/<%= @leg["govtrack_id"] %>-200px.jpeg">
   </div>
+
+  <div id="vote-history"></div>
 
 
 </div>
