--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -20,7 +20,10 @@
     <img  id="pic" src="https://www.govtrack.us/data/photos/<%= @leg["govtrack_id"] %>-200px.jpeg">
   </div>
 
-  <div id="vote-history"></div>
+  <div id="vote-history">
+    <p id="question"></p>
+    <p id="link"></p>
+  </div>
 
 
 </div>
