Select option changed. Style changes.

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,6 +1,8 @@
-
+<div class="stateSelect">
+<h2> Choose your state from the list below </h2>
 <form action="/" method="post">
   <select name="state">
+    <option value=""  >List...</option>
     <option value="AL">Alabama</option>
     <option value="AK">Alaska</option>
     <option value="AZ">Arizona</option>
@@ -52,11 +54,9 @@
     <option value="WI">Wisconsin</option>
     <option value="WY">Wyoming</option>
   </select>
-  <button>Submit</button>
 
 
 
 </form>
-
+</div>
 <p></p>
-
