--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-<div class="container">
-  <h1>Rep Request</h1>
+<div class="header">
+  <a href="/"<h1>Rep Request</h1></a>
 </div>
 
 <%= yield %>
