--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,24 +1,54 @@
 body {
-  background-color: grey;
+  background-color: #bbbbbb;
   margin: 0;
   padding: 0;
   font-family: 'Arvo', serif;
 }
+p {
+  margin: 0;
+}
 select {
   font-size: 2em;
 }
-.container {
-  background-color: #419BF9;
-  margin: 0;
-  padding: 5%;
-}
-.container h1 {
-  font-size: 4em;
+h2 {
+  font-size: 2.5em;
   color: ghostwhite;
+  margin: 25px 0 0 25px;
+}
+h3 {
+  font-size: 1.5em;
+  color: #3296ff;
+}
+.photo {
+  margin: 25px 0 0 25px;
+  float: left;
+}
+.info {
+  color: ghostwhite;
+}
+.header {
+  background-color: #3296ff;
+  margin: 0;
+  padding: 30px;
+}
+.header a {
+  color: ghostwhite;
+  text-decoration: none;
+  font-size: 4em;
   margin: 0;
 }
 li {
   font-size: 1.5em;
+  margin-left: 25px;
+  color: #3296ff;
+}
+a {
+  text-decoration: none;
   color: ghostwhite;
-  margin-left: 3%;
+}
+.votingHistory {
+  float: right;
+}
+.votegraph {
+  width: 25px;
 }
