--- a/app/public/less/style.less
+++ b/app/public/less/style.less
@@ -1,32 +1,64 @@
 body {
-  background-color: grey;
+  background-color: #bbbbbb;
   margin: 0;
   padding: 0;
   font-family: 'Arvo', serif;
 
 }
-
+p {
+  margin: 0;
+}
 select {
   font-size: 2em;
 }
-           
+
+h2 {
+  font-size:2.5em;
+  color: ghostwhite;
+  margin: 25px 0 0 25px;
+}
+
+h3 {
+  font-size: 1.5em;
+  color: #3296ff;
+}
+.photo {
+  margin: 25px 0 0 25px;
+  float: left;
+}
+
+.info {
+  color: ghostwhite;
+}
   
-.container {
-  background-color: #419BF9;
+.header {
+  background-color: #3296ff;
   margin: 0; 
-  padding: 5%;
-    
-    h1 {
+  padding: 30px;
+
+    a {
+      color:ghostwhite;
+      text-decoration: none;
       font-size: 4em;
-      color: ghostwhite;
       margin: 0;
     }
 }
 
-
 li {
   font-size: 1.5em;
-  color: ghostwhite;
-  margin-left: 3%;
+  margin-left: 25px;
+  color: #3296ff;
+}
 
+a {
+  text-decoration: none;
+  color: ghostwhite;
+}
+
+.votingHistory {
+  float: right;
+}
+
+.votegraph {
+  width: 25px;
 }
