Committee info displays on page

--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -11,8 +11,8 @@
       <p><%= @leg["party"] %>, <%= @leg["state"] %></p>
       <p> Twitter:  @<%= @leg["twitter"] %> </p>
       <p> Facebook: www.facebook.com/<%= @leg["facebook"] %> </p>
+      <p class="committee"></p>
     </div>
-    <img  id="pic" src="https://www.govtrack.us/data/photos/<%= @leg["govtrack_id"] %>-200px.jpeg">
   </div>
 
   <div id="vote-history">
