--- a/app/public/less/lessMore/grid.less
+++ b/app/public/less/lessMore/grid.less
@@ -1,83 +1,59 @@
 body {
-  font-family: 'Arvo', serif;
-}
-header a {
-  color: ghostwhite;
-  text-decoration: none;
-  font-size: 4em;
-  margin: 0;
-}
-.bio {
-  text-align: center;
-}
-.job {
-  color: ghostwhite;
-}
-li {
-  font-size: 1.5em;
-  margin-left: 25px;
-  color: #3296ff;
-}
-a {
-  text-decoration: none;
-  color: ghostwhite;
-}
-h2 {
-  font-size: 2.5em;
-  color: ghostwhite;
-  margin: 0 18px;
-}
-h3 {
-  font-size: 1.5em;
-  color: #3296ff;
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
-.info {
-  color: ghostwhite;
-}
-body {
   background-color: #bbbbbb;
   margin: 0;
   padding: 0;
 }
+
 .containerRow {
   display: flex;
   flex-grow: 1;
 }
+
 .containerCol {
   display: flex;
   flex-direction: column;
 }
+
 .bio {
   flex-grow: 1;
   background-color: #3296ff;
   align-items: stretch;
 }
+
 .info {
   flex-grow: 3;
   background-color: #bbbbbb;
   margin-left: 20px;
 }
+
+.contact {
+
+}
+
 p {
   margin: 0;
 }
+
 select {
   font-size: 2em;
 }
+
 .photo {
   display: flex;
   margin: 10px;
   justify-content: center;
 }
+  
 header {
   background-color: #3296ff;
-  margin: 0;
+  margin: 0; 
   padding: 30px;
 }
+
 .votingHistory {
   float: right;
 }
+
 .votegraph {
   width: 25px;
 }
