--- a/app/public/less/style.less
+++ b/app/public/less/style.less
@@ -1,64 +1,3 @@
-body {
-  background-color: #bbbbbb;
-  margin: 0;
-  padding: 0;
-  font-family: 'Arvo', serif;
-
-}
-p {
-  margin: 0;
-}
-select {
-  font-size: 2em;
-}
-
-h2 {
-  font-size:2.5em;
-  color: ghostwhite;
-  margin: 25px 0 0 25px;
-}
-
-h3 {
-  font-size: 1.5em;
-  color: #3296ff;
-}
-.photo {
-  margin: 25px 0 0 25px;
-  float: left;
-}
-
-.info {
-  color: ghostwhite;
-}
-  
-.header {
-  background-color: #3296ff;
-  margin: 0; 
-  padding: 30px;
-
-    a {
-      color:ghostwhite;
-      text-decoration: none;
-      font-size: 4em;
-      margin: 0;
-    }
-}
-
-li {
-  font-size: 1.5em;
-  margin-left: 25px;
-  color: #3296ff;
-}
-
-a {
-  text-decoration: none;
-  color: ghostwhite;
-}
-
-.votingHistory {
-  float: right;
-}
-
-.votegraph {
-  width: 25px;
-}
+@import 'lessMore/type';
+@import 'lessMore/grid';
+ 
