Committee and bill list styling.

--- a/app/public/less/lessMore/type.less
+++ b/app/public/less/lessMore/type.less
@@ -43,6 +43,29 @@ h3 {
   margin-bottom: 10px;
 }
 
+.committee {
+  li {
+    color:ghostwhite;
+    font-size: 1em;
+    margin-left: 0;
+  }
+}
+
+.bill {
+  li:nth-child(odd){
+    color:ghostwhite;
+    font-size: 1em;
+    margin-left: 0;
+  }
+  li:nth-child(even) {
+    color:#494949;
+    font-size: .75em;
+    list-style: none;
+    margin-bottom: 1em;
+  }
+}
+
+
 .info {
   color: ghostwhite;
 }
