--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -75,6 +75,23 @@ body {
   background-color: #bbbbbb;
   margin-left: 20px;
 }
+.pie {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #3296ff;
+  background-image: linear-gradient(to right, transparent 50%, ghostwhite 0);
+  overflow: hidden;
+}
+.pie::before {
+  content: '';
+  display: block;
+  margin-left: 50%;
+  height: 100%;
+  background-color: inherit;
+  transform-origin: 0 50%;
+  transform: rotate(0.1turn);
+}
 p {
   margin: 0;
 }
