--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -29,23 +29,23 @@
 
   <div class="containerCol">
     <div class="info">
-        <h3>Bills Sponsored</h3>
+
+      <h3>Bills Sponsored</h3>
         <ul class="bill"></ul>
-        <h3>Committees</h3>        
+    
+      <h3>Committees</h3>        
         <ul class="committee"></ul>
     
-        <h3>Voting History</h3>
-      <div class="votingHistory">
-        <!--   <%= @vote["eligible"]%> <div class="votegraph" style='background: #419BF9; height: <%= @vote["eligible"] %>px'> &nbsp;</div> 
-          <%= @vote["missed"]%> <div class="votegraph" style='background: ghostwhite; height: <%= @vote["missed"] %>px'> &nbsp;</div>  -->
-      </div>
+      <h3>Voting History</h3>
+        <div class="votingHistory">
+          <div class="pie" style="transform: rotate(<%= @vote["missed"] %>turn);"></div>
+        </div>
     </div>
+
   </div>
 
-</div>
-
-
-
+<!-- (<%= @vote["missed"] %> / (<%= @vote["eligible"] %> + <%= @vote["missed"] %>))
+ -->
 
 <!-- 
   <div class="votingHistory">
