--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -59,7 +59,13 @@
 </div>
 <p></p>
 
-<form>
-
+<form action="/" method="get">
+<input id="street" type="text" placeholder="Street Address" name="street" value="">
+<input id="city" type="text" placeholder="City" name="city" value="">
+<input  id="state" type="text" placeholder="State" name="state" value="">
+<input id="zip" type="text" placeholder="Zip" name="zip" value=""> 
+<button id="submit" >Search</button>
 
 </form>
+
+
