--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -37,9 +37,9 @@
         <ul class="committee"></ul>
     
       <h3>Voting History</h3>
-        <div class="votingHistory">
-          <div class="pie" style="transform: rotate(<%= @vote["missed"] %>turn);"></div>
-        </div>
+        <div class="votingHistory"></div>
+        <p class="eVotes">Eligible Votes: <%= @vote["eligible"]%></p> 
+        <p class="mVotes">Missed Votes: <%= @vote["missed"]%></p>
     </div>
 
   </div>
@@ -47,8 +47,8 @@
 <!-- (<%= @vote["missed"] %> / (<%= @vote["eligible"] %> + <%= @vote["missed"] %>))
  -->
 
-<!-- 
-  <div class="votingHistory">
+
+ <!--  <div class="votingHistory">
       <%= @vote["eligible"]%> <div class="votegraph" style='background: #419BF9; height: <%= @vote["eligible"] %>px'> &nbsp;</div> 
       <%= @vote["missed"]%> <div class="votegraph" style='background: ghostwhite; height: <%= @vote["missed"] %>px'> &nbsp;</div> 
   </div> -->
