--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -38,8 +38,9 @@
     
       <h3>Voting History</h3>
         <div class="votingHistory"></div>
-        <p class="eVotes">Eligible Votes: <%= @vote["eligible"]%></p> 
         <p class="mVotes">Missed Votes: <%= @vote["missed"]%></p>
+        <p class="eVotes">Eligible Votes: <span style="color: #3296ff"><%= @vote["eligible"]%></span></p> 
+
     </div>
 
   </div>
