--- a/app/public/less/lessMore/type.less
+++ b/app/public/less/lessMore/type.less
@@ -62,10 +62,13 @@ h3 {
     font-size: .75em;
     list-style: none;
     margin-bottom: 1em;
+    margin-left: 0;
   }
 }
 
-
+.eVotes {
+  color: #3296ff;
+}
 
 .info {
   color: ghostwhite;
