--- a/app/public/less/lessMore/grid.less
+++ b/app/public/less/lessMore/grid.less
@@ -26,7 +26,18 @@ body {
   margin-left: 20px;
 }
  
+.job {
+  color: ghostwhite;
+  margin-bottom: 2em;
+}
 
+.links {
+  margin-bottom: 2em;
+  img {
+    padding-left: 5px;
+    margin-right: 5px;
+  }
+}
 
 p {
   margin: 0;
