--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -57,7 +57,8 @@
 
 </form>
 </div>
-<p></p>
+
+<h2> Or enter your address in the form </h2>
 
 <form action="/" method="post">
 <input id="street" type="text" placeholder="Street Address" name="street" value="">
@@ -120,5 +121,5 @@
 
 </form>
 
-<div class="fuck"></div>
+<p></p>
 
