--- a/app/public/less/lessMore/type.less
+++ b/app/public/less/lessMore/type.less
@@ -8,6 +8,7 @@ header {
       text-decoration: none;
       font-size: 4em;
       margin: 0;
+      text-align: right;
     }
 }
 
@@ -30,17 +31,21 @@ a {
   color: ghostwhite;
 }
 
+ul {
+  margin-top: 5px;
+}
+
 h2 {
   font-size:2.5em;
   color: ghostwhite;
-  margin: 0 18px;
+  margin: 20px 20px 10px 20px;
 }
 
 h3 {
   font-size: 1.5em;
   color: #3296ff;
   margin-top: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .committee {
