--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -6,6 +6,7 @@ header a {
   text-decoration: none;
   font-size: 4em;
   margin: 0;
+  text-align: right;
 }
 .bio {
   text-align: center;
@@ -22,16 +23,19 @@ a {
   text-decoration: none;
   color: ghostwhite;
 }
+ul {
+  margin-top: 5px;
+}
 h2 {
   font-size: 2.5em;
   color: ghostwhite;
-  margin: 0 18px;
+  margin: 20px 20px 10px 20px;
 }
 h3 {
   font-size: 1.5em;
   color: #3296ff;
   margin-top: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .committee li {
   color: ghostwhite;
@@ -68,6 +72,17 @@ body {
 .containerCol {
   display: flex;
   flex-direction: column;
+  padding: 20px;
+}
+.containerCol form {
+  margin: auto;
+  margin-bottom: 24px;
+}
+.containerRowHome {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  text-align: center;
 }
 .bio {
   flex-grow: 1;
@@ -90,11 +105,11 @@ body {
   padding-left: 5px;
   margin-right: 5px;
 }
+li:last-child {
+  margin-bottom: 30px;
+}
 p {
   margin: 0;
-}
-select {
-  font-size: 2em;
 }
 .photo {
   display: flex;
@@ -107,10 +122,16 @@ header {
   padding: 30px;
 }
 .votingHistory {
+  margin-bottom: 10px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background-color: #3296ff;
   background-image: linear-gradient(to right, transparent 50%, ghostwhite 0);
   overflow: hidden;
+}
+.containerVotes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
