--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Project 3</title>
+    <title>Rep Request</title>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="/../css/style.css" />
 </head>
