--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -37,11 +37,16 @@
         <ul class="committee"></ul>
     
       <h3>Voting History</h3>
-        <div class="votingHistory"></div>
-        <p class="mVotes">Missed Votes: <%= @vote["missed"]%></p>
-        <p class="eVotes">Eligible Votes: <span style="color: #3296ff"><%= @vote["eligible"]%></span></p> 
+        <div class="containerRow">
+          <div class="containerCol">
+            <div class="votingHistory"></div>
+          </div>
+          <div class="containerVotes">
+            <p class="mVotes">Missed Votes: <%= @vote["missed"]%></p>
+            <p class="eVotes">Eligible Votes: <span style="color: #3296ff"><%= @vote["eligible"]%></span></p> 
+          </div>
 
-    </div>
+        </div>
 
   </div>
 
